# home-control

./: .clang-format  CMakeLists.txt  README.md
apps/autolight/: CMakeLists.txt  autolight.cpp  bitmask.h  example.cfg  lamp_control.cpp  lamp_control.h  lamp_settings.h  mqtt.cpp  mqtt.h  settings.h  settings_reader.cpp
apps/autolight/tests/: CMakeLists.txt  helper.cpp  helper.h  test_output.cpp  test_output_functions.cpp  test_settings_reader.cpp
apps/gpio_ctrl/: CMakeLists.txt  example.cfg  gpio_ctrl.cpp  mqtt_gpio.cpp  mqtt_gpio.h  settings.h  settings_reader.cpp  settings_reader.h
apps/gpio_ctrl/tests/: CMakeLists.txt  helper.h  test_output_functions.cpp  test_settings_reader.cpp
apps/value_action/: CMakeLists.txt  example.cfg  json_helper.cpp  json_helper.h  linearcolourmap.cpp  linearcolourmap.h  mqtt.cpp  mqtt.h  settings.h  settings_reader.cpp  value_action.cpp
apps/value_action/tests/: CMakeLists.txt  test_colourmap.cpp  test_json.cpp  test_settings_reader.cpp
cmake/: Findlibconfig.cmake  Findlibgpiod.cmake  Findmosquitto.cmake
libs/mqttbase/: CMakeLists.txt
libs/mqttbase/include/mqttbase/: MqttCallback.h  MqttClient.h  MultiMqttCallback.h  helper.h
libs/mqttbase/src/: MqttClient.cpp  helper.cpp
