add_executable(tests_unit_autolight
    ../../../libs/test_helper/runner.cpp
    test_output.cpp
    test_output_functions.cpp
    test_settings_reader.cpp
    helper.cpp
    ../lamp_control.cpp
    ../settings_reader.cpp
)
target_link_libraries(tests_unit_autolight
   PRIVATE
      gtest
      gmock
      libconfig::libconfig
)
